--- a/java/pom.xml
+++ b/java/pom.xml
@@ -130,6 +130,7 @@
             <exclude>**/*.linux</exclude>
             <exclude>**/client/build/**</exclude>
             <exclude>**/*.tbl</exclude>
+            <exclude>**/*.fbs</exclude>
           </excludes>
         </configuration>
       </plugin>
@@ -462,6 +463,7 @@
   </dependencies>
 
   <modules>
+    <module>data-headers</module>
     <module>memory</module>
     <module>vector</module>
   </modules>
