--- a/java/format/pom.xml
+++ b/java/format/pom.xml
@@ -16,7 +16,7 @@
 <parent>
   <artifactId>arrow-java-root</artifactId>
   <groupId>org.apache.arrow</groupId>
-  <version>0.1-SNAPSHOT</version>
+  <version>0.1-decimal</version>
 </parent>
 
 <artifactId>arrow-format</artifactId>
